# OmniDataCrafter

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile.dev  Dockerfile.runtime  build.sh  run_dev.sh
omni_data_crafter/: pipeline.py
omni_data_crafter/app/: controller.py  db.py  logging.py  ray_worker.py  settings.py  worker.py  worker_v2.py
omni_data_crafter/app/models/: __init__.py  task.py
omni_data_crafter/app/schemas/: task.py
omni_data_crafter/io/: vpf_stream.py
omni_data_crafter/ops/: clip.py
omni_data_crafter/ops/cut_detectors/: __init__.py  content_detector.py  cut_detector.py
omni_data_crafter/ops/object_detectors/: __init__.py  yolo_v8.py
omni_data_crafter/ops/ocr/: __init__.py  pp_ocr.py
omni_data_crafter/ops/optical_flow_estimators/raft/: raft.py
omni_data_crafter/ops/video_decoders/: __init__.py  video_decoder.py  vpf_video_decoder.py
omni_data_crafter/utils/: cvt.py  cvt_.py  trt_engine.py  vpf.py
scripts/: batch_cut_detection.py  clip_to_onnx.py  launch.py
