[tool.poetry]
name = "omni-data-crafter"
version = "0.1.0"
description = ""
authors = ["Ming Yang <ymviv@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
beanie = "^1.23.6"
pydantic-settings = "^2.1.0"
structlog = "^23.2.0"
requests = "^2.31.0"
ftfy = "^6.1.3"
regex = "^2023.10.3"
clip = {git = "https://github.com/openai/CLIP.git"}
safetensors = "^0.4.1"
lancedb = "^0.3.5"
pyarrow = "^14.0.1"
onnx = "^1.15.0"
onnxruntime-gpu = "^1.16.3"
onnxconverter-common = "^1.14.0"
cuda-python = "^12.3.0"
lz4 = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
